# EchoSync

./: .cache  .dockerignore  .gitignore  .version  .version tracker  ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_NOW.md  Dockerfile  FINAL_STATUS_REPORT.md  Guide.md  MIGRATION_PLAN.md  NEW_FIELDS_STATUS.md  PLEX_FIX_SUMMARY.md  PLEX_REFACTOR_COMPLETE.md  PROVIDER_PLUGIN_INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README-Docker.md  README.md  REFACTORING_MANIFEST.md  SECURITY.md  SOULSYNC_TRACK_GAPS_ANALYSIS.md  TIDAL_CHANGELOG.md  TIDAL_FIX_SUMMARY.md  TIDAL_QUICK_REFERENCE.md  TIDAL_SECURITY_AUDIT.md  _fix_sql_apos.py  alembic.ini  backend_entry.py  beatport_unified_scraper.py  debug_providers.py  debug_watchlist.py  docker-compose.yml  entrypoint.sh  final_test_fix.py  fix_hook_manager.py  (+75 more)
alembic/: env.py
config/: .encryption_key  config.db  config.example.json  config.json  dashboard.yaml  settings.py
core/: Cargo.toml  __init__.py  account_manager.py  adapter_registry.py  auto_importer.py  backend_services.py  binary_runner.py  cert_manager.py  consensus.py  content_models.py  database_update_worker.py  enums.py  error_handler.py  event_bus.py  health_check.py  health_check_examples.py  hook_manager.py  jellyfin_client.py  job_queue.py  listenbrainz_client.py  listenbrainz_manager.py  lyrics_client.py  matching_engine.py  media_scan_manager.py  migrations.py  models.py  navidrome_client.py  network_utils.py  path_mapper.py  personalized_playlists.py  plex_client.py  plugin_loader.py  plugin_orm.py  plugin_router.py  plugin_store.py  plugin_system.py  plugin_venv.py  provider.py  provider_base.py  provider_capabilities.py  (+23 more)
core/adapters/: jellyfin_adapter.py  listenbrainz_adapter.py  navidrome_adapter.py  plex_adapter.py  soulseek_adapter.py  spotify_adapter.py  tidal_adapter.py
core/caching/: __init__.py  provider_cache.py
core/file_handling/: __init__.py  base_io.py  jail.py  local_io.py  path_mapper.py  post_processor.py  tagging_io.py
core/interfaces/: provider.py
core/matching_engine/: __init__.py  echo_sync_track.py  fingerprinting.py  match_service.py  matching_engine.py  scoring_profile.py  soul_sync_album.py  soul_sync_artist.py  soul_sync_track.py  text_utils.py  track_parser.py
core/oauth/: cert_manager.py  manager.py  sidecar.py
core/plugins/: __init__.py  hook_manager.py  security.py
core/services/: download_manager.py
core/src/: config_manager.rs  download_manager.rs  errors.rs  health.rs  importer_service.rs  lib.rs  library_manager.rs  limiter.rs  logging.rs  matching.rs  parser.rs  post_processor.rs  provider_cache.rs  provider_manager.rs  provider_trait.rs  scanner_service.rs  scheduler.rs  search_manager.rs  structs.rs  test_parser.rs  wishlist.rs  worker.rs
core/suggestion_engine/: __init__.py  analytics.py  conflict_resolution.py  consensus.py  deletion.py  discovery.py  vibe_profiler.py  webhooks.py
data/: config.db  music_library.db  sync_history.jsonl  working.db
database/: __init__.py  bulk_operations.py  config.db  config_database.py  config_models.py  engine.py  models.py  music_database.py  music_library.db  working_database.py
docs/: API_READINESS_CHECKLIST.md  APPLICATION_OVERVIEW.md  ARCHITECTURE.md  ARCHITECTURE_CORE_PROVIDERS_SERVICES.md  BACKEND_ARCHITECTURE.md  BACKEND_READY_FOR_SVELTE.md  (+40 more)
(+503 files in other folders)
