[project]
name = "echosync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncio-mqtt>=0.16.0",
    "beautifulsoup4>=4.12.0",
    "cryptography>=41.0.0",
    "datetime>=6.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "lrclibapi>=0.3.1",
    "maturin>=1.11.5",
    "mutagen>=1.47.0",
    "pillow>=10.0.0",
    "plexapi>=4.17.0",
    "psutil>=6.0.0",
    "pyacoustid>=1.3.0",
    "pycryptodome>=3.19.0",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.22.0",
    "pytest-mock>=3.12.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "retrying>=1.4.2",
    "spotipy>=2.23.0",
    "sqlalchemy>=2.0.0",
    "unidecode>=1.3.8",
    "yt-dlp>=2024.12.13",
    "redis>=4.5.0",
    "rapidfuzz>=3.14.3",
    "watchdog>=4.0.0",
    "werkzeug>=3.1.6",
    "alembic>=1.18.4",
    "pypinyin>=0.55.0",
    "opencc-python-reimplemented>=0.1.7",
    "pykakasi>=2.3.0",
    "hangul-romanize>=0.1.0",
]
