[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module", "chrono"] }
pyo3-log = "0.13.2"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
