[package]
name = "core"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
strsim = "0.11"
once_cell = "1.19"
pyo3 = { version = "0.27.0", features = ["extension-module", "chrono"] }
pyo3-log = "0.13.2"
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.8.5"
serde_json = "1.0.133"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
tokio = { version = "1.41.1", features = ["full"] }
sha2 = "0.10.8"
pythonize = "0.27.0"
thiserror = "1.0"
cron = "0.12"
walkdir = "2.5.0"
notify = "8.2.0"
lofty = "0.22.4"
futures = "0.3.31"
dashmap = "6.1.0"
async-trait = "0.1.83"
crossbeam-channel = "0.5.15"
